# talos-crypto-producer

./: Cargo.toml  Dockerfile  README.md
k8s/: deployment.yaml
src/: main.rs
