[package]
name = "crypto-websocket-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
chrono = "0.4"
